# ps1

./: Cargo.toml
src/: duration.rs  ffi.rs  git.rs  k8s.rs  lib.rs  main.rs  zsh.rs
