[package]
name = "ps1"
version = "0.1.0"
authors = ["Daniel Strittmatter <daniel@lockitnetwork.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tico = "2.0"
git2 = "0.13"
ansi_term = "0.12"
lazy_static = "1.4"
dirs = "2.0"