[package]
name = "ps1"
version = "0.1.0"
authors = ["Daniel Strittmatter <daniel@lockitnetwork.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tico = "2.0"
git2 = "0.20"
ansi_term = "0.12"
lazy_static = "1.5"
dirs = "6.0"
kube-client = "1.1.0"
k8s-openapi = { version = "0.25.0", features = ["v1_31"] }
